Fix close alignment

--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -66,6 +66,7 @@
 .sl-dialog__close {
   flex: 0 0 auto;
   display: flex;
+  align-items: center;
   background: none;
   border: none;
   border-radius: var(--sl-border-radius-small);
